--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" type="text/css" href="./styles/36_americas_cup.css" />
  </head>
  <body>
-	<a href="challenger/american_magic.html">logique <\a>
+	<a href="challenger/american_magic.html">logique </a>
   <h1>L’America’s Cup 2023 en Nouvelle-Zélande</h1>
   <hr />
 
